--- a/spring-boot-workshop/src/main/resources/application.properties
+++ b/spring-boot-workshop/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.address=localhost
 
 server.servlet.context-path=/imdb
 spring.mvc.servlet.path=/api/v1
+
+major.version=1
+minor.version=2
+timestamp=1623071547
