--- a/hr-microservice/src/main/resources/application.properties
+++ b/hr-microservice/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=2023
+server.address=localhost
 
+server.servlet.context-path=/hr
+spring.mvc.servlet.path=/api/v1
+
+major.version=1
+minor.version=2
+timestamp=1623071547
+
+#mongodb configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/hr
+
+#kafka configuration
+spring.kafka.consumer.group-id=hr
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
