--- a/lottery-microservice/src/main/resources/application.properties
+++ b/lottery-microservice/src/main/resources/application.properties
@@ -4,8 +4,10 @@ server.port=3200
 server.servlet.context-path=/lottery
 spring.mvc.servlet.path=/api/v1
 
-randomNumberGenerator=fast
+spring.application.name=lottery
 
-lottery.min=10
-lottery.max=100
-lottery.size=1
+spring.cloud.config.username=admin
+spring.cloud.config.password=secret
+spring.config.import=optional:configserver:http://localhost:4200
+
+management.endpoints.web.exposure.include=*
