--- a/lottery-microservice/src/main/resources/application.properties
+++ b/lottery-microservice/src/main/resources/application.properties
@@ -6,8 +6,15 @@ spring.mvc.servlet.path=/api/v1
 
 spring.application.name=lottery
 
+#spring cloud config configuration
 spring.cloud.config.username=admin
 spring.cloud.config.password=secret
 spring.config.import=optional:configserver:http://localhost:4200
 
 management.endpoints.web.exposure.include=*
+
+#spring eureka client configuration
+eureka.client.service-url.defaultZone=http://localhost:6100/eureka
+eureka.instance.lease-expiration-duration-in-seconds=1
+eureka.instance.lease-renewal-interval-in-seconds=2
+eureka.instance.hostname=localhost
