--- a/lottery-microservice/src/main/resources/application.properties
+++ b/lottery-microservice/src/main/resources/application.properties
@@ -18,3 +18,7 @@ eureka.client.service-url.defaultZone=http://localhost:6100/eureka
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.instance.lease-renewal-interval-in-seconds=2
 eureka.instance.hostname=localhost
+
+#security configuration
+security.jwt.token.secret-key=elma
+security.jwt.token.expiration=720000
