--- a/study-resilience-patterns/src/main/resources/application.properties
+++ b/study-resilience-patterns/src/main/resources/application.properties
@@ -15,3 +15,10 @@ resilience4j.ratelimiter.instances.ratelimiter1.limit-refresh-period=10s
 resilience4j.bulkhead.instances.bulkhead1.max-concurrent-calls=4
 resilience4j.bulkhead.instances.bulkhead1.max-wait-duration=2s
 resilience4j.bulkhead.instances.bulkhead1.event-consumer-buffer-size=10
+
+resilience4j.circuitbreaker.instances.circuitbreaker1.failure-rate-threshold=20
+resilience4j.circuitbreaker.instances.circuitbreaker1.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.circuitbreaker1.permitted-number-of-calls-in-half-open-state=12
+resilience4j.circuitbreaker.instances.circuitbreaker1.max-wait-duration-in-half-open-state=10s
+
+
